Bug: contact page height on mobile

--- a/src/components/pages/Contact.sass
+++ b/src/components/pages/Contact.sass
@@ -1,7 +1,7 @@
 .contact-main
   height: 100vh
   .contact-background
-    height: 100vh
+    height: 120vh
     h1
       padding-top: 70px
       color: red
